# llll-chart2sus

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: rhythmgame_chart_203115_04.bytes.json  rhythmgame_chart_204101_04.bytes.json
scripts/: bootstrap_toolchain.ps1  doctor.ps1
src/llll_chart2sus/: __init__.py  __main__.py  cli.py  errors.py  ir.py  linklike_loader.py  mapper.py  pipeline.py  sus_writer.py  validators.py
tests/: test_cli.py  test_loader.py  test_mapper.py  test_sus_writer.py
