[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llll-chart2sus"
version = "0.1.0"
description = "Convert Link! Like! LoveLive! chart JSON into Project SEKAI community .sus charts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "llll-chart2sus contributors" }]
dependencies = [
    "svgwrite>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

